regular lables in a loop

--- a/index-vue.html
+++ b/index-vue.html
@@ -156,111 +156,62 @@
           </g>
         </g>
         <a xlink:href="stories/albany-displaced.html" >
-          
             <rect id="story-link" x="168.5" y="386.4" fill="#FFFFFF" stroke="#000000" stroke-miterlimit="10" stroke-dasharray="6,6,6,6,6,6" width="190" height="31"/>
         </a>
       </g>
       <g id="text">
-        <text transform="matrix(1 0 0 1 480.4004 59.5889)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany: Lost Places, Displaced People</tspan><tspan x="13.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">The Reaction to Redevelopment</tspan></text>
+        
         <g>
           <text transform="matrix(1 0 0 1 479.79 29.3481)" font-family="'FontinSans-Bold'" font-size="18px">City/Theme Scroll Story</text>
         </g>
-        <text transform="matrix(1 0 0 1 898.1382 870.1675)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan><tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan></text>
 
-        <text transform="matrix(1 0 0 1 100 380)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to Redevelopment</tspan></text>
+        <text transform="matrix(1 0 0 1 480.4004 59.5889)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany: Lost Places, Displaced People</tspan><tspan x="13.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">The Reaction to Redevelopment</tspan></text>
 
-        <text transform="matrix(1 0 0 1 295.6422 781.5813)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan><tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan></text>
-        <text transform="matrix(1 0 0 1 752.0264 371.9218)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan><tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan></text>
         <rect x="872.9" y="1313.9" fill="none" width="120" height="50"/>
-        <text transform="matrix(1 0 0 1 888.5714 1323.8612)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Rooming </tspan><tspan x="1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Houses and SROs</tspan></text>
         <g>
           <text transform="matrix(1 0 0 1 210.7005 405.8017)" font-family="'FontinSans-Regular'" font-size="12px">Link to scroll story</text>
         </g>
+
+        <!-- begin lables for the ones that have arrows -->
+        <text transform="matrix(1 0 0 1 898.1382 950)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan><tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan></text>
+
+        <text transform="matrix(1 0 0 1 100 380)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to Redevelopment</tspan></text>
+
+        <text transform="matrix(1 0 0 1 205 781.5813)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan><tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan></text>
+
+        <text transform="matrix(1 0 0 1 752.0264 450)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan><tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan></text>
+
+        <text transform="matrix(1 0 0 1 988.5714 1323.8612)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Rooming </tspan><tspan x="1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Houses and SROs</tspan></text>
+
+        <!-- begin irregular titles -->
         <g>
-          <text transform="matrix(1 0 0 1 885.402 1276.1191)" font-family="'FontinSans-Regular'" font-size="12px">23. Theme Narrative</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.4021 1146.9512)" font-family="'FontinSans-Regular'" font-size="12px">22. Menu</text>
-        </g>
-        <text transform="matrix(1 0 0 1 885.4024 1114.7584)" font-family="'FontinSans-Bold'" font-size="18px">Themes &amp; Essays</text>
-        <g>
-          <text transform="matrix(1 0 0 1 1037.1182 947.0836)" font-family="'FontinSans-Regular'" font-size="12px">21. Event Popup</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 1037.1182 824.9156)" font-family="'FontinSans-Regular'" font-size="12px">20. Timeline</text>
-        </g>
-        <text transform="matrix(1 0 0 1 1037.1185 788.7229)" font-family="'FontinSans-Bold'" font-size="18px">Timeline</text>
-        <g>
-          <text transform="matrix(1 0 0 1 885.5 826.4644)" font-family="'FontinSans-Regular'" font-size="12px">19. Item Detail</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.5 702.9644)" font-family="'FontinSans-Regular'" font-size="12px">18. Filter Results</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.5 575.9902)" font-family="'FontinSans-Regular'" font-size="12px">17. Filter Selections</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.4999 451.1191)" font-family="'FontinSans-Regular'" font-size="12px">16. Filters Menu</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.4999 326.1191)" font-family="'FontinSans-Regular'" font-size="12px"> 15. Default View</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 885.5 293.3481)" font-family="'FontinSans-Bold'" font-size="18px">The Visual Record</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 738.4626 326.1191)" font-family="'FontinSans-Regular'" font-size="12px">X. Albany Map</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 738.4628 201.9902)" font-family="'FontinSans-Regular'" font-size="12px">14. Map Menu</text>
-        </g>
-        <text transform="matrix(1 0 0 1 738.4631 173.7974)" font-family="'FontinSans-Bold'" font-size="18px">Interactive Maps</text>
-        <g>
-          <text transform="matrix(1 0 0 1 271 1364.3481)" font-family="'FontinSans-Regular'" font-size="12px">13. Full Story</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 270.9998 1238.6818)" font-family="'FontinSans-Regular'" font-size="12px">12. Brief Story</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 270.9998 1113.0145)" font-family="'FontinSans-Regular'" font-size="12px">11. City Menu Tooltip</text>
-        </g>
-        <text transform="matrix(1 0 0 1 271 986.3473)" font-family="'FontinSans-Regular'" font-size="12px">10. Albany Menu</text>
-        <g>
-          <text transform="matrix(1 0 0 1 271 859.6809)" font-family="'FontinSans-Regular'" font-size="12px">9. City Menu</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 271 734.0145)" font-family="'FontinSans-Regular'" font-size="12px">8. Story page</text>
-        </g>
-        <text transform="matrix(1 0 0 1 271 606.3481)" font-family="'FontinSans-Regular'" font-size="12px">7. Topic Menu</text>
-        <text transform="matrix(1 0 0 1 270.9998 574.9183)" font-family="'FontinSans-Bold'" font-size="18px">Personal Stories</text>
-        <g>
-          <text transform="matrix(1 0 0 1 135.4626 607.1191)" font-family="'FontinSans-Regular'" font-size="12px">6. Stuy Town video</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 135.5827 479.1191)" font-family="'FontinSans-Regular'" font-size="12px">X. City Menu</text>
-        </g>
-        <text transform="matrix(1 0 0 1 135.4626 451.5539)" font-family="'FontinSans-Bold'" font-size="18px">Sights &amp; Sounds</text>
-        <g>
-          <text transform="matrix(1 0 0 1 0 606.9644)" font-family="'FontinSans-Regular'" font-size="12px">5. Theme Intro</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 -7.629395e-05 480.2259)" font-family="'FontinSans-Regular'" font-size="12px">4. City Intro</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 0 353.0952)" font-family="'FontinSans-Regular'" font-size="12px">3. City/Story Tooltip</text>
-        </g>
-        <g>
-          <text transform="matrix(1 0 0 1 0 225.9644)" font-family="'FontinSans-Regular'" font-size="12px">2. City/Story Menu</text>
+          <text transform="matrix(1 0 0 1 2.441406e-04 14.9218)" font-family="'FontinSans-Bold'" font-size="18px">Home</text>
         </g>
         <g>
           <text transform="matrix(1 0 0 1 0 192.8936)" font-family="'FontinSans-Bold'" font-size="18px">4 Cities / 4 Stories</text>
         </g>
+
+        <text transform="matrix(1 0 0 1 135.4626 451.5539)" font-family="'FontinSans-Bold'" font-size="18px">Sights &amp; Sounds</text>
+
+        <text transform="matrix(1 0 0 1 1037.1185 788.7229)" font-family="'FontinSans-Bold'" font-size="18px">Timeline</text>
         <g>
-          <text transform="matrix(1 0 0 1 0 40.8481)" font-family="'FontinSans-Regular'" font-size="12px">1. Home page</text>
+          <text transform="matrix(1 0 0 1 885.5 293.3481)" font-family="'FontinSans-Bold'" font-size="18px">The Visual Record</text>
         </g>
-        <g>
-          <text transform="matrix(1 0 0 1 2.441406e-04 14.9218)" font-family="'FontinSans-Bold'" font-size="18px">Home</text>
+        <text transform="matrix(1 0 0 1 738.4631 173.7974)" font-family="'FontinSans-Bold'" font-size="18px">Interactive Maps</text>
+
+        <text transform="matrix(1 0 0 1 270.9998 574.9183)" font-family="'FontinSans-Bold'" font-size="18px">Personal Stories</text>
+
+        <text transform="matrix(1 0 0 1 885.4024 1114.7584)" font-family="'FontinSans-Bold'" font-size="18px">Themes &amp; Essays</text>
+
+        <!-- begin regular titles -->
+        <g v-for="(mockup, index) in mockups" 
+          :key="mockup.slug">
+          <text 
+            :transform="'matrix(1 0 0 1 ' + mockup.svgx  + ' ' + (mockup.svgy - 8)  + ')'"
+            font-family="'FontinSans-Regular'" 
+            font-size="12px">{{ index + 1 }}. {{ mockup.shortTitle }}</text>
         </g>
+
       </g>
       <g id="picture">  
           <image overflow="visible" width="150" height="1436" xlink:href="mockups/menupics/scroll-story.jpg"  x="499" y="86">
