links from menu to scroll ids

--- a/index-vue.html
+++ b/index-vue.html
@@ -169,17 +169,34 @@
 
         <rect x="872.9" y="1313.9" fill="none" width="120" height="50"/>
         <g>
-          <text transform="matrix(1 0 0 1 210.7005 405.8017)" font-family="'FontinSans-Regular'" font-size="12px">Link to scroll story</text>
+          <a xlink:href="stories/albany-displaced.html" >
+            <text transform="matrix(1 0 0 1 210.7005 405.8017)" font-family="'FontinSans-Regular'" font-size="12px">Link to scroll story</text>
+        </a>
         </g>
 
         <!-- begin lables for the ones that have arrows -->
-        <text transform="matrix(1 0 0 1 898.1382 950)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan><tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan></text>
+        <a xlink:href="stories/albany-displaced.html#thing8">
+          <text transform="matrix(1 0 0 1 898.1382 950)">
+            <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan>
+            <tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan>
+          </text>
+        </a>
 
         <text transform="matrix(1 0 0 1 100 380)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to Redevelopment</tspan></text>
 
-        <text transform="matrix(1 0 0 1 205 781.5813)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan><tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan></text>
+        <a xlink:href="stories/albany-displaced.html#hunters">
+          <text transform="matrix(1 0 0 1 205 781.5813)">
+            <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan>
+            <tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan>
+          </text>
+        </a>
 
-        <text transform="matrix(1 0 0 1 752.0264 450)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan><tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan></text>
+        <a xlink:href="stories/albany-displaced.html#thing2" >
+          <text transform="matrix(1 0 0 1 752.0264 450)">
+            <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan>
+            <tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan>
+          </text>
+        </a>
 
         <text transform="matrix(1 0 0 1 988.5714 1323.8612)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Rooming </tspan><tspan x="1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Houses and SROs</tspan></text>
 
@@ -214,9 +231,9 @@
 
       </g>
       <g id="picture">  
-          <image overflow="visible" width="150" height="1436" xlink:href="mockups/menupics/scroll-story.jpg"  x="499" y="86">
-        </image>
-        
+        <a xlink:href="stories/albany-displaced.html" >
+          <image overflow="visible" width="150" height="1436" xlink:href="mockups/menupics/scroll-story.jpg"  x="499" y="86"></image>
+        </a>
       </g>
       </svg>
    
