--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -123,8 +123,11 @@
 				<p class="gallery-quote">&ldquo;Up until last night, the plans were going through. We had bought up 10 pieces of property. We knocked down buildings. Then today we read the papers. It was a blockbuster.&rdquo;</p>
 			</div>
 
-			<div>
-				<p class="gallery-caption">Pharmacist Ken Hunter had been in business up the block from the Cathedral since the Great Depression. From the NYS Archives.</p>
+			<div id="hunters">
+				<p class="gallery-caption">Pharmacist Ken Hunter had been in business up the block from the Cathedral since the Great Depression. From the NYS Archives.<br/>
+				<a href="../index-vue.html">return to mockup?</a>
+				</p>
+
 				<p class="gallery-quote">&ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
 			</div>
 
