--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -29,11 +29,17 @@
 <body>
 	<nav class="main-menu">
 		<ul>
-			<li><a href="../mockups/home.html">home</a></li>
-			<li class="selected"><a href="../mockups/citystory1.html">4 cities / 4 stories</a></li>
+			<li>
+				<a href="../index.html?mindex=0">home</a>
+			</li>
+			<li class="selected">
+				<a href="../index.html?mindex=1">4 cities / 4 stories</a>
+			</li>
 			<li><a href="#">sights &amp; sounds</a></li>
 			<li><a href="#">maps</a></li>
-			<li class="last-menu-item"><a href="../mockups/personal1.html">personal stories</a></li>
+			<li class="last-menu-item">
+				<a href="../index.html?mindex=7">personal stories</a>
+			</li>
 		</ul>		
 	</nav>
 
@@ -125,7 +131,7 @@
 
 			<div id="hunters">
 				<p class="gallery-caption">Pharmacist Ken Hunter had been in business up the block from the Cathedral since the Great Depression. From the NYS Archives.<br/>
-				<a href="../index-vue.html">return to mockup?</a>
+				<a href="../index.html?mindex=8">Read the Personal Story: Hunter&apos;s Pharmacy</a>
 				</p>
 
 				<p class="gallery-quote">&ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
@@ -296,13 +302,17 @@
 				<p class="gallery-text">Market District. The massive Lyon Block, a former print factory, dominated this area, which encompassed the city farmers market and specialized in produce sales and distribution. Residents lived in rental units above stores and on the edges of this district. This is where the local Boys Club and Methodist Inner City Mission got their start.</p>
 			</div>
 			<div id="thing8" class="narrower">
-				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion.</p>
+				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion. <br/>
+				<a href="../index.html?mindex=20">View the Visual Record: South Pearl Street Shopping District</a>
+				</p>
 			</div>
 			<div id="thing9" class="narrower">
 				<p class="gallery-text">The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
 			</div>
 			<div id="thing10" class="narrower">
-				<p class="gallery-text">[maybe some wrap-up? Mention of access to the full interactive map? Maybe a link?]</p>
+				<p class="gallery-text">
+					<a href="../index.html?mindex=15">Explore the Interactive Map: Albany&apos;s Lost Neighborhoods</a>
+				</p>
 			</div>
 
 			<p>&nbsp;</p>
