--- a/index.html
+++ b/index.html
@@ -5,52 +5,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Picturing Urban Renewal</title>
-  <link rel="stylesheet" href="https://stackedit.io/style.css" />
+  <!-- <link rel="stylesheet" href="https://stackedit.io/style.css" /> -->
+  <link rel="stylesheet" href="styles/css/UR-project-site-styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <style type="text/css" media="screen">
-    .lightbox {
-      position: fixed;
-      top: 0px;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url(mockups/images/overlay.png) repeat;
-      z-index: 99;
-      /*needed to override hidden*/
-      display: block;
-    }
-
-    /* shared styles for journal and credits popups, specific styles in FullEntry.vue and Credits.vue */
-    #slimpop-wrapper {
-      background-color: #eff0de;
-      border: 1px solid #b3aa98;
-      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.75);
-      color: #535442;
-      display: grid;
-      padding: 1em 3em 3em 3em;
-      position: relative;
-      /*don from here on*/
-      top: 60px;
-      left: 80px;
-      width: 80%;
-    }
-
-    /*slim will flash on screen when loading, unless initially hidden*/
-    .hidden {
-      display: none;
-    }
-
     
   </style>
 </head>
 
-<body class="stackedit">
+<body>
   <div id="app">
-  	<div class="stackedit__html">
+  	<div class="menu-page">
   		<h1 id="magic-lens-documentation">Picturing Urban Renewal</h1>
-      <p>This site provides access to mockups and other online material and links related to the NEH DPP Prototype Phase “Picturing Urban Renewal" grant application. These pages are offered to accompany the grant proposal written narrative and further information about the mockups can be found there.</p>
+      <p>This site provides access to mockups and other draft online material and links related to the NEH Digital Projects for the Public Prototype Phase “Picturing Urban Renewal" grant application. These pages are offered to accompany the written grant proposal and further information about the mockups can be found there.</p>
 
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      <!-- graphic menu --> 
+      <svg class="graphic-menu" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          viewBox="0 0 1133 1466.9" enable-background="new 0 0 1133 1466.9" xml:space="preserve">
       <g id="rects">
 
@@ -230,7 +200,8 @@
         </a>
       </g>
       </svg>
-   
+
+      <!-- text menu -->   
   		<h2>City Story</h2>
   		<ul>
   			<li><a href="stories/albany-displaced.html">Albany Lost Places/Displaced People</a></li>
@@ -251,7 +222,7 @@
   			</li>
   		</ul>
 
-  	</div> <!-- end class stack_edit -->
+  	</div> <!-- /menu-page -->
 
     <!-- slim pop -->
     <div 
@@ -262,14 +233,14 @@
       <div id="slimpop-wrapper">
         <p>Picturing Urban Renewal Mockups</p>
 
-        <h2>{{ mockup.title }}</h2>
+        <h1>{{ mockup.title }}</h1>
         <p> 
           <a
           v-if="prevExists"
           href="#"
           @click.stop.prevent="incrementMockup('prev')"
           >previous: {{ prevShortTitle }} </a>
-          <span v-else style="color:#bbb;">Prev</span>
+          <span v-else class="disabled">Prev</span>
           |
           <a @click="closeMockup">close (return to menu)</a>
           | 
@@ -278,7 +249,7 @@
           href="#"
           @click.stop.prevent="incrementMockup('next')"
           >next: {{ nextShortTitle }} </a>
-          <span v-else style="color:#bbb;">Next &#8605;</span>
+          <span v-else class="disabled">Next</span>
         </p>
         <img :src="'mockups/images/' + mockup.imageName + '.jpg'">
         
