change from index to mock number

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -30,15 +30,15 @@
 	<nav class="main-menu">
 		<ul>
 			<li>
-				<a href="../index.html?mindex=0">home</a>
+				<a href="../index.html?mocknum=1">home</a>
 			</li>
 			<li class="selected">
-				<a href="../index.html?mindex=1">4 cities / 4 stories</a>
+				<a href="../index.html?mocknum=2">4 cities / 4 stories</a>
 			</li>
 			<li><a href="#">sights &amp; sounds</a></li>
 			<li><a href="#">maps</a></li>
 			<li class="last-menu-item">
-				<a href="../index.html?mindex=7">personal stories</a>
+				<a href="../index.html?mocknum=8">personal stories</a>
 			</li>
 		</ul>		
 	</nav>
@@ -131,7 +131,7 @@
 
 			<div id="hunters">
 				<p class="gallery-caption">Pharmacist Ken Hunter had been in business up the block from the Cathedral since the Great Depression. From the NYS Archives.<br/>
-				<a href="../index.html?mindex=8">Read the Personal Story: Hunter&apos;s Pharmacy</a>
+				<a href="../index.html?mocknum=9">Read the Personal Story: Hunter&apos;s Pharmacy</a>
 				</p>
 
 				<p class="gallery-quote">&ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
@@ -303,7 +303,7 @@
 			</div>
 			<div id="thing8" class="narrower">
 				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion. <br/>
-				<a href="../index.html?mindex=20">View the Visual Record: South Pearl Street Shopping District</a>
+				<a href="../index.html?mocknum=21">View the Visual Record: South Pearl Street Shopping District</a>
 				</p>
 			</div>
 			<div id="thing9" class="narrower">
@@ -311,7 +311,7 @@
 			</div>
 			<div id="thing10" class="narrower">
 				<p class="gallery-text">
-					<a href="../index.html?mindex=15">Explore the Interactive Map: Albany&apos;s Lost Neighborhoods</a>
+					<a href="../index.html?mocknum=16">Explore the Interactive Map: Albany&apos;s Lost Neighborhoods</a>
 				</p>
 			</div>
 
