--- a/index.html
+++ b/index.html
@@ -144,25 +144,33 @@
         </a>
         </g>
 
-        <!-- begin lables for the ones that have arrows -->
-        <text transform="matrix(1 0 0 1 898.1382 950)">
-          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">South Pearl St.</tspan>
-          <tspan x="-8.4" y="14" font-family="'FontinSans-Italic'" font-size="12px">Shopping District </tspan>
+        <!-- begin labels for the ones that have arrows -->
+        <text transform="matrix(1 0 0 1 385 800)">
+          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Learn More:</tspan>
+          <tspan x="0" y="14" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s Pharmacy</tspan>
         </text>
 
-        <text transform="matrix(1 0 0 1 100 380)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Reaction to Redevelopment</tspan></text>
+        <a xlink:href="map-demo.html" >
+          <text transform="matrix(1 0 0 1 752.0264 450)">
+            <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Link to:</tspan>
+            <tspan x="0" y="14" font-family="'FontinSans-Italic'" font-size="12px">Map Demo</tspan>
+          </text>
+        </a>
 
-        <text transform="matrix(1 0 0 1 205 781.5813)">
-          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Hunter’s</tspan>
-          <tspan x="-1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pharmacy</tspan>
+        <text transform="matrix(1 0 0 1 720 660)">
+          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Learn More: Albany’s</tspan>
+          <tspan x="0" y="14" font-family="'FontinSans-Italic'" font-size="12px">Lost Neighborhoods</tspan>
         </text>
 
-        <text transform="matrix(1 0 0 1 752.0264 450)">
-          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Lost</tspan>
-          <tspan x="-5.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Neighborhoods</tspan>
+        <text transform="matrix(1 0 0 1 720 894)">
+          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Learn More: South </tspan>
+          <tspan x="0" y="14" font-family="'FontinSans-Italic'" font-size="12px">Pearl St. Shopping District </tspan>
         </text>
 
-        <text transform="matrix(1 0 0 1 988.5714 1323.8612)"><tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Albany’s Rooming </tspan><tspan x="1.6" y="14" font-family="'FontinSans-Italic'" font-size="12px">Houses and SROs</tspan></text>
+        <text transform="matrix(1 0 0 1 720 1346)">
+          <tspan x="0" y="0" font-family="'FontinSans-Italic'" font-size="12px">Learn More: Albany’s</tspan>
+          <tspan x="0" y="14" font-family="'FontinSans-Italic'" font-size="12px">Rooming Houses and SROs</tspan>
+        </text>
 
         <!-- begin irregular titles -->
         <g>
