--- a/map-demo.html
+++ b/map-demo.html
@@ -9,14 +9,17 @@
 </head>
 
 <body class="stackedit">
-	<div class="stackedit__html">
-		<h2>Picturing Urban Renewal Mockups</h2>
-		<h1>Map Demo</h1>
-		<p><a href="index.html">return to menu</a> </p>
+  <div class="stackedit__html">
+    <h2>Picturing Urban Renewal Mockups</h2>
+    <h1>Map Demo</h1>
+    <p><a href="index.html">return to menu</a> </p>
 
-		<p>Map video goes here</p>
+    <video width="1000" controls>
+      <source src="media/map-demo.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-	</div>
+  </div>
 </body>
 
 </html>
