--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -263,7 +263,8 @@
 
 		<div class="full-image">
 			<img src="images/pearl-street-shopping.jpg"/>
-			<p>The South Pearl Street Shopping District, 1963. From the NYS Archives.</p>
+			<p>The South Pearl Street Shopping District, 1963. From the NYS Archives. <br/>
+				<a href="../index.html?mocknum=21">View the Visual Record: South Pearl Street Shopping District</a></p>
 		</div>
 
 		<div class="narrative">	
@@ -302,9 +303,7 @@
 				<p class="gallery-text">Market District. The massive Lyon Block, a former print factory, dominated this area, which encompassed the city farmers market and specialized in produce sales and distribution. Residents lived in rental units above stores and on the edges of this district. This is where the local Boys Club and Methodist Inner City Mission got their start.</p>
 			</div>
 			<div id="thing8" class="narrower">
-				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion. <br/>
-				<a href="../index.html?mocknum=21">View the Visual Record: South Pearl Street Shopping District</a>
-				</p>
+				<p class="gallery-text">South Pearl Street Shopping District. Best known for bargain clothing, shoes, and furniture, this section drew shoppers from across the region. It also included upscale outlets like B. J. Koblenz Jewelry and M. Solomon Furs and Fashion.</p>
 			</div>
 			<div id="thing9" class="narrower">
 				<p class="gallery-text">The Gut. Factories stood side-by-side with single-room-occupancy hotels, missions, and taverns in this section of the city. At the turn of the twentieth-century, it had been home to newly-arrived European immigrants. Decades later, Southern migrants settled here before moving up the hill to more prosperous neighborhoods.</p>
