refinements to project menu and pops, link enhancement in scroll story

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -131,7 +131,7 @@
 
 			<div id="hunters">
 				<p class="gallery-caption">Pharmacist Ken Hunter had been in business up the block from the Cathedral since the Great Depression. From the NYS Archives.<br/>
-				<a href="../index.html?mocknum=9">Read the Personal Story: Hunter&apos;s Pharmacy</a>
+				<a href="../index.html?mocknum=9" class="caption-link">Read the Personal Story: Hunter&apos;s Pharmacy</a>
 				</p>
 
 				<p class="gallery-quote">&ldquo;I&rsquo;ve been here 33 years this November. I&rsquo;ve established a very good business and I would like to finish my life of work here. It would be too great a hardship to try and start over again. Why don&rsquo;t they just take the property that had deteriorated and leave the good paying businesses and properties alone?&rdquo;</p>
@@ -264,7 +264,7 @@
 		<div class="full-image">
 			<img src="images/pearl-street-shopping.jpg"/>
 			<p>The South Pearl Street Shopping District, 1963. From the NYS Archives. <br/>
-				<a href="../index.html?mocknum=21">View the Visual Record: South Pearl Street Shopping District</a></p>
+				<a href="../index.html?mocknum=21" class="caption-link">View the Visual Record: South Pearl Street Shopping District</a></p>
 		</div>
 
 		<div class="narrative">	
@@ -310,7 +310,7 @@
 			</div>
 			<div id="thing10" class="narrower">
 				<p class="gallery-text">
-					<a href="../index.html?mocknum=16">Explore the Interactive Map: Albany&apos;s Lost Neighborhoods</a>
+					<a href="../index.html?mocknum=16" class="caption-link">Explore the Interactive Map: Albany&apos;s Lost Places</a>
 				</p>
 			</div>
 
