--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -71,6 +71,16 @@
 	
 	<div id="chapter1-title" class="chapter-title">
 		<h2>The Immediate Response</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li class="current"><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Portfolio</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter1">	
