--- a/index-svg2.html
+++ b/index-svg2.html
@@ -15,7 +15,7 @@
 <div id="app">
 	<div class="menu-page">
 		<h1 id="magic-lens-documentation">Picturing Urban Renewal</h1>
-    <p>This site provides access to mockups and other draft online material and links related to the NEH Digital Projects for the Public Prototype Phase “Picturing Urban Renewal" grant application. These pages are offered to accompany the written grant proposal and further information about the mockups can be found there. (Modern browser required -- e.g. not IE 11)</p>
+    <p>This site provides access to mockups and other draft online material in support of the NEH Digital Projects for the Public Prototype Phase &ldquo;Picturing Urban Renewal&rdquo; grant application. These pages are intended to accompany the written grant proposal and design document; further information about the mockups can be found in those documents. (Modern browser required &mdash; e.g. not IE 11)</p>
 
     <!-- graphic menu --> 
     <svg class="graphic-menu" version="1.1" xmlns="http://www.w3.org/2000/svg" 
