refined dots menu

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -73,12 +73,12 @@
 		<h2>The Immediate Response</h2>
 		<nav class="dots dots-fillup">
 			<ul>
-				<li class="current"><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Products</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="current"><a href="#">immediate-response</a></li>
+				<li><a href="#">hope-hoax</a></li>
+				<li><a href="#">before-mall</a></li>
+				<li><a href="#">lost-homes</a></li>
+				<li><a href="#">designing-mall</a></li>
+				<li><a href="#">where-people</a></li>
 			</ul>
 		</nav>
 	</div>
