activated nav dots on scroll

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -73,12 +73,13 @@
 		<h2>The Immediate Response</h2>
 		<nav class="dots dots-fillup">
 			<ul>
-				<li class="current"><a href="#">immediate-response</a></li>
-				<li><a href="#">hope-hoax</a></li>
-				<li><a href="#">before-mall</a></li>
-				<li><a href="#">lost-homes</a></li>
-				<li><a href="#">designing-mall</a></li>
-				<li><a href="#">where-people</a></li>
+				<li class="current"><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7">98-Acre Wasteland</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -185,6 +186,17 @@
 
 	<div id="chapter2-title" class="chapter-title">
 		<h2>Hope or Hoax?</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li class="current"><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter2">
@@ -267,6 +279,17 @@
 
 	<div id="chapter3-title" class="chapter-title">
 		<h2>Before the South Mall</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li class="current"><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter3">
@@ -340,6 +363,17 @@
 
 	<div id="chapter4-title" class="chapter-title">
 		<h2>Lost Homes, Uprooted Neighborhoods</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li class="current"><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter4">
@@ -395,6 +429,17 @@
 
 	<div id="chapter5-title" class="chapter-title">
 		<h2>Designing the South Mall</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li class="current"><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter5">
@@ -487,6 +532,17 @@
 
 	<div id="chapter6-title" class="chapter-title">
 		<h2>Where Did All The People Go?</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li class="current"><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter6">
@@ -556,6 +612,17 @@
 
 	<div id="chapter7-title" class="chapter-title">
 		<h2>98-Acre Wasteland</h2>
+		<nav class="dots dots-fillup">
+			<ul>
+				<li><a href="#chapter1">The Immediate Response</a></li>
+				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter3">Before the South Mall</a></li>
+				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
+				<li><a href="#chapter5">Designing the South Mall</a></li>
+				<li><a href="#chapter6">Where Did All The People Go?</a></li>
+				<li class="current"><a href="#chapter7">98-Acre Wasteland</a></li>
+			</ul>
+		</nav>
 	</div>
 
 	<section id="chapter7">
