start chap drop

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -22,6 +22,9 @@
 
 	<style type="text/css" media="screen">
 		#mapdiv img {border: none;}
+		.dropdown-menu{
+			display: none;
+		}
 	</style>
  
 </head>
@@ -29,7 +32,7 @@
 <body>
 	<nav class="main-menu">
 		<ul>
-			<li>
+			<li id="greg">
 				<a href="../index.html?mocknum=1">home</a>
 			</li>
 			<li class="selected">
@@ -47,6 +50,12 @@
 		<header class="story-title">
 			<h3 class="grid-title">Albany: Lost Places/Displaced People</h3>		
 			<h1>The Reaction to Redevelopment</h1>
+			<p id="fred">&nbsp; <a href="#">Chapters <></a>
+		      <ul class="dropdown-menu">
+		        <li><a href="#">Dropdown Link</a></li>
+		        <li><a href="#">Another Dropdown Link</a></li>
+		      </ul>
+			</p>
 		</header>
 
 		<div class="full-image">
@@ -71,10 +80,10 @@
 	
 	<div id="chapter1-title" class="chapter-title">
 		<h2>The Immediate Response</h2>
-		<nav class="dots dots-fillup">
+		<nav class="dots dots-fillup"> 
 			<ul>
 				<li class="current"><a href="#chapter1">The Immediate Response</a></li>
-				<li><a href="#chapter2">Hope or Hoax?</a></li>
+				<li><a href="#chapter2" title="Hope or Hoax?">Hope or Hoax?</a></li>
 				<li><a href="#chapter3">Before the South Mall</a></li>
 				<li><a href="#chapter4">Lost Homes, Uprooted Neighborhoods</a></li>
 				<li><a href="#chapter5">Designing the South Mall</a></li>
@@ -88,6 +97,7 @@
 
 		<div class="narrative">	
 
+			<p>&nbsp;</p>
 			<p>Local newspaper editors immediately sent reporters out to collect man-on-the-street interviews from the South Mall area. The Albany Democratic Party organized a house-to-house canvass for the same purpose.</p>
 
 			<p class="poo">The goals and methods of reporters and political operatives differed dramatically. Owned by the same publisher, Albany&rsquo;s two local newspapers backed the State&rsquo;s South Mall plan with pro-development editorials and stories.  Reporters targeted an area characterized by small businesses and transient residents, where they found support for, or at least acceptance of, the State plan. By contrast, the Democratic canvassers catalogued opposition to the South Mall among an aging population of owner-occupiers and long-term tenants living near the Cathedral of the Immaculate Conception. Many of these residents were active in the Catholic Church and loyal to the party&rsquo;s leadership.
@@ -408,7 +418,7 @@
 			<p class="poo">Psychologist Marc Fried analyzed the impact of displacement on the former residents of Boston&apos;s West End, a section similar in demographics to the South Mall redevelopment area. In 1963, Fried described being forcibly dispersed as a &ldquo;highly disturbing and disruptive&rdquo; experience evoking an emotional response akin to grief. &ldquo;It&apos;s just like a plant,&rdquo; one of his informants told him, &ldquo;when you tear up the roots, it dies!&rdquo; More recently, psychiatrist Mindy Fullilove diagnosed the trauma of displacement as &ldquo;root shock.&rdquo;
 			
 				<span class="sidebar essay">
-					<a href="#">&ldquo;Root Shock&rdquo;</a>
+					<a href="#">Urban Renewal and &ldquo;Root Shock&rdquo;</a>
 				</span>
 			</p>
 
