--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -50,12 +50,12 @@
 		<header class="story-title">
 			<h3 class="grid-title">Albany: Lost Places/Displaced People</h3>		
 			<h1>The Reaction to Redevelopment</h1>
-			<p id="fred">&nbsp; <a href="#">Chapters <></a>
+			<nav id="fred"><a href="#">Chapters &rarr;</a>
 		      <ul class="dropdown-menu">
 		        <li><a href="#">Dropdown Link</a></li>
 		        <li><a href="#">Another Dropdown Link</a></li>
 		      </ul>
-			</p>
+			</nav>
 		</header>
 
 		<div class="full-image">
