scroll dot titles on hover

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -29,7 +29,15 @@
 		  position: absolute;
 		  top: 1em;
 		  left: 1em;
-		}		
+		}	
+		.dot-title {
+		  top: 50%;
+		  margin: 0;
+		  padding: 0;
+		  position: absolute;
+		  right: 1em;
+		  display: none;
+		}	
 	</style>
  
 </head>
@@ -100,6 +108,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title">title will go here</span>
 		</nav>
 	</div>
 
@@ -216,6 +225,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
@@ -309,6 +319,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
@@ -393,6 +404,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
@@ -459,6 +471,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
@@ -562,6 +575,7 @@
 				<li class="current"><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li><a href="#chapter7-title">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
@@ -642,6 +656,7 @@
 				<li><a href="#chapter6">Where Did All The People Go?</a></li>
 				<li class="current"><a href="#chapter7">98-Acre Wasteland</a></li>
 			</ul>
+			<span class="dot-title"></span>
 		</nav>
 	</div>
 
