fix scroll links to mocks

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -328,7 +328,7 @@
 		<div class="full-image">
 			<img src="images/pearl-street-shopping.jpg"/>
 			<p>The South Pearl Street Shopping District, 1963. From the NYS Archives. <br/>
-				<a href="../index.html?mocknum=21" class="caption-link">View the Visual Record: South Pearl Street Shopping District</a></p>
+				<a href="../index.html?mocknum=19" class="caption-link">View the Visual Record: South Pearl Street Shopping District</a></p>
 		</div>
 
 		<div class="narrative">	
@@ -374,7 +374,7 @@
 			</div>
 			<div id="thing10" class="narrower">
 				<p class="gallery-text">
-					<a href="../index.html?mocknum=16" class="caption-link">Explore the Interactive Map: Albany&apos;s Lost Places</a>
+					<a href="../index.html?mocknum=14" class="caption-link">Explore the Interactive Map: Albany&apos;s Lost Places</a>
 				</p>
 			</div>
 
@@ -383,7 +383,7 @@
 		</div><!-- /caption-panel -->
 
 		<div class="narrative">	
-			<p>To learn more about the people who lived and worked in these lost neighborhoods, visit the <a href="">Personal Stories</a> section of this website. To see the sights, check out the <a href="">Visual Record</a> section. You can also <a href="">Explore the Interactive Map</a>, which puts displaced people and demolished structures back where they once belonged.</p>
+			<p>To learn more about the people who lived and worked in these lost neighborhoods, visit the <a href="../index.html?mocknum=11">Personal Stories</a> section of this website. To see the sights, check out the <a href="../index.html?mocknum=15">Visual Record</a> section. You can also <a href="../index.html?mocknum=14">Explore the Interactive Map</a>, which puts displaced people and demolished structures back where they once belonged.</p>
 
 			<p>&nbsp;</p>
 		</div><!-- /narrative -->	
@@ -440,7 +440,7 @@
 			<p class="poo">Psychologist Marc Fried analyzed the impact of displacement on the former residents of Boston&apos;s West End, a section similar in demographics to the South Mall redevelopment area. In 1963, Fried described being forcibly dispersed as a &ldquo;highly disturbing and disruptive&rdquo; experience evoking an emotional response akin to grief. &ldquo;It&apos;s just like a plant,&rdquo; one of his informants told him, &ldquo;when you tear up the roots, it dies!&rdquo; More recently, psychiatrist Mindy Fullilove diagnosed the trauma of displacement as &ldquo;root shock.&rdquo;
 			
 				<span class="sidebar essay">
-					<a href="#">Urban Renewal and &ldquo;Root Shock&rdquo;</a>
+					<a href="../index.html?mocknum=21">Urban Renewal and &ldquo;Root Shock&rdquo;</a>
 				</span>
 			</p>
 
@@ -451,7 +451,7 @@
 
 			<p>&ldquo;It&apos;s very hard for us to pull up roots. We had a lovely life here,&rdquo; Emma Leonard told Dick Weber on December 22, 1964, the day she and her family became the last to move out of the South Mall redevelopment area. By that time, the Leonard family home overlooking Lincoln Park was surrounded by the rubble-strewn remnants of the Italian-Irish Catholic community into which Emma had been born, grown up, married, and become a mother. She described witnessing its destruction over the past two-and-a-half years as a &ldquo;nightmare.&rdquo;</p>
 
-			<p>To learn more about people who once lived and worked in the area demolished for the South Mall, visit the <a href="#">Personal Stories</a> section of this website.</p>
+			<p>To learn more about people who once lived and worked in the area demolished for the South Mall, visit the <a href="../index.html?mocknum=11">Personal Stories</a> section of this website.</p>
 
 		</div><!-- /narrative -->
 
@@ -546,7 +546,7 @@
 
 		<div class="narrative">
 			
-			<p>To see more South Mall design drawings and other planning documents, visit the <a href="#">Visual Record</a> section of this website.</p>
+			<p>To see more South Mall design drawings and other planning documents, visit the <a href="../index.html?mocknum=16">Visual Record</a> section of this website.</p>
 			
 			<p class="poo">Outside of Albany, reviews of the $250 million (estimated) capitol complex were considerably less kind. Mostly notably, an unsigned critique in the influential journal Progressive Architecture dismissed the South Mall design as &ldquo;an exercise in architectural pop art.&rdquo; The reviewer blamed the governor and his enablers for its faults. Despite pushback from Rockefeller supporters, the journal&rsquo;s editor stood by the critique, especially criticism of the governor&rsquo;s role in the design process. &ldquo;Quite a few architects are disturbed by this approach to planning,&rdquo; he said. &ldquo;Albany deserves the best, and I don&rsquo;t think it is getting the best.&rdquo;
 
